fixed so that footer takes up the fullscreen on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -499,10 +499,16 @@ article#about-container{
 
 footer{
 	text-align:center;
-	padding:66px 0 0 0;
+	height: 100vh;
+	position: relative;
 }
 
 footer>p{
+	position: absolute;
+	bottom:0;
+	text-align: center;
+	display: block;
+	width: 100%;
 	padding:178px 0 22px 0;
 	line-height: 22px;
 	color:#555;
@@ -514,11 +520,16 @@ footer>.contact-logos{
 	display: inline-block;
 	height:50px;
 	margin:0 22px;
-	position: relative;
+	position: absolute;
+	top:50%;
+	left:50%;
+	margin-left: -30px;
+	margin-top: -50px;
 }
 
 footer>.mail{
 	padding:5px 0;
+	margin-left: -120px;
 }
 
 footer>.mail:hover>svg>g>path{
@@ -540,6 +551,7 @@ footer>.contact-logos>svg{
 
 footer>.codepen{
 	height:60px;
+	margin-left: 60px;
 }
 
 footer>.codepen:hover>svg>g>path{
@@ -557,7 +569,7 @@ footer>.codepen:hover>.codepen-label{
   	left: 0;
   	right: 0;
   	margin: 0 auto;
-  	width: 0;
+  	width: 0px;
   	overflow: hidden;
   	font-weight: 700;
   	bottom:-25px;
@@ -846,9 +858,6 @@ body>a{
 		overflow: hidden;
 	}
 
-	footer{
-		z-index: 20;
-	}
 
 	footer>p{
 		padding:88px 0 22px 0;
@@ -856,7 +865,48 @@ body>a{
 		color:#555;
 		font-size: 12px;
 		font-weight: 500;
+		position: relative;
 	}
+
+	footer{
+		z-index: 20;
+		text-align:center;
+		height: auto;
+		position: static;
+		padding-top: 22px;
+	}
+
+
+	footer>.contact-logos{
+		display: inline-block;
+		position: relative;
+		left:0;
+	}
+
+	footer>.mail{
+		margin-left: 0 22px;
+	}
+
+
+	
+	footer>.codepen{
+		margin-left: 0 22px;
+	}
+
+	.social-media-label{
+		position: absolute;
+	  	left: 0;
+	  	right: 0;
+	  	margin: 0 auto;
+	  	width: 0px;
+	  	overflow: hidden;
+	  	font-weight: 700;
+	  	bottom:-25px;
+	  	-webkit-transition:all 0.1s ease-in-out;
+	  	transition:all 0.1s ease-in-out;
+	}
+
+
 
 	aside{
 		position: absolute;
